2015-04-01 Fixed issue with draggable filledGap in Text module
2015-03-31 Fixed playing words in TextAudio while zooming using IWB Toolbard module
2015-03-31 Added getView() command to Shape module
2015-03-31 Fixed issue with crashing browser on iOS in eKeyboard module
2015-03-26 Fixed issue with setColor and nonremovable lines in Figure Drawing module
2015-03-26 Fixed issue with playing event on Android 5.0 devices in Multi Audio module
2015-03-25 Added Show slides property and positioning in Text Audio module
2015-03-25 Fixed drawing logic, double events and added setEraserThickness, setMarkerThickness commands in IWB Toolbar module
2015-03-23 Updated Google Swiffy library to ver. 7.2
2015-03-23 Added show() and hide() commands in Source List module
2015-03-23 Fixed issue with lines interpretation in Figure Drawing module properties
2015-03-20 Fixed issue with Chapters in Hierarchical Lesson Report module
2015-03-20 Added new controls in TextAudio module
2015-03-19 Added Figure Drawing module
2015-03-18 Added new area type and fixed issue with show answers in Coloring module
2015-03-17 Fixed issue with preview of editor in Hierarchical Lesson Report
2015-03-16 Added show() and hide() commands to Image Source module.
2015-03-16 Fixed issue with custom class in Check Answers module
2015-03-13 Fixed issue with mode Keep Aspect on IE9, 10 in Image module
2015-03-13 Fixed issue with sending events in Shape Tracing module
2015-03-12 Fixed issue with clicking on Android 4.4.2 in Image Identification module
2015-03-12 Fixed issue with playing audio on Firefox 19 in Slideshow module
2015-03-12 Fixed Show Answers mode in Table module
2015-03-11 Added show() and hide() commands to Multiple Gap module
2015-03-11 Fixed problem with reacting to ShowAnswers event in Multiple Gap module connected to Image Source modules
2015-03-09 Added reset command in Image Gap module